--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ button:hover {
 
   <!-- 入院操作 -->
   <div style="margin-top:15px;">
-    <input type="text" id="patientName" placeholder="输入病人姓名">
+    <input type="text" id="patientName" placeholder="输入病人床号姓名">
     <input list="doctorListDatalist" id="doctorName" placeholder="选择或输入管床医生姓名">
     <datalist id="doctorListDatalist"></datalist>
     <button onclick="admitPatient()">入院</button>
